--- a/env.yml
+++ b/env.yml
@@ -1,19 +1,19 @@
 name: nlreg1d
 channels:
+    - toddp
     - conda-forge
     - defaults
 dependencies:
     - python=3.8
-    - pip
-    - numpy
-    - scipy
-    - matplotlib
+    - pip=22.0.3
+    - numpy=1.22.2
+    - scipy=1.8.0
+    - matplotlib=3.5.1
     - pyqt
-    - ipython
-    - spm1d
-    - fdasrsf
+    - ipython=8.0.1
+    - notebook=6.4.8
+    - nb_conda_kernels=2.3.1
+    - spm1d=0.4.10
+    - fdasrsf=2.3.6
     - pip:
-        - fdasrsf
-        - scikit-fda
-
-
+        - scikit-fda==0.7.1
